# grpc_cpp

./: CMakeLists.txt  client.cpp
controller/: common.h  grpc.h  myserver.cpp  server.cpp
protos/: myserver.proto  proto.sh  server.proto
protos/model/: data.proto  doubleList.proto  message.proto
